chore: add build scripts and dependencies
Add Gulp and Webpack build scripts and package.json
dependencies for the build and source file linting.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,6 @@
   "tslint.packageManager": "yarn",
   "npm.packageManager": "yarn",
   "files.autoSave": "onFocusChange",
-  "editor.formatOnSave": true,
   "editor.rulers": [80, 120],
   "search.exclude": {
     "**/node_modules": true,
@@ -12,5 +11,6 @@
   "html.format.enable": false,
   "files.associations": {
     "yarn.lock": "yaml"
-  }
+  },
+  "eslint.autoFixOnSave": true
 }
