--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@commitlint/config-conventional": "^7.0.1",
     "autoprefixer": "^8.6.2",
     "babel-eslint": "^8.2.5",
+    "bootstrap": "^4.1.3",
     "browser-sync": "^2.24.5",
     "cross-env": "^5.2.0",
     "css-loader": "^0.28.11",
