--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "html-webpack-plugin": "^3.2.0",
     "http-server": "^0.11.1",
     "husky": "^0.14.3",
+    "postcss-loader": "^2.1.6",
     "prettier": "^1.13.7",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
