chore: migrate to Hugo
Closes #21

--- a/.gitignore
+++ b/.gitignore
@@ -246,3 +246,16 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+
+# For 'gulp-real-favicon'
+favicondata.json
+
+# Firebase artifacts
+.firebase/
+
+# Hugo
+public/
+resources/
+
+# Hugo static files manifest
+data/*.json
