--- a/venue_sponsors.toml
+++ b/venue_sponsors.toml
@@ -1,5 +1,5 @@
 [params]
-    [[params.hosting_sponsors]]
+    [[params.venue_sponsors]]
     name = "Advanced Graphics Systems"
     url = "https://www.ags-am.com/"
-    logo_filename = "ags_logo.jpg"
+    logo_filename = "ags_logo.png"
