chore: remove Blog, add link to subreddit on homepage
Closes #27

--- a/config.toml
+++ b/config.toml
@@ -23,6 +23,7 @@ publishDir = "dist"
     venue_sponsor_form_url = "https://goo.gl/forms/tWpYiXHm1wxH2JwS2"
     meetup_group_url = "https://www.meetup.com/smedfw"
     youtube_channel_url = "https://www.youtube.com/smevirtual"
+    subreddit_url = "https://www.reddit.com/r/smedfw"
     github_org_url = "https://github.com/smedfw"
     facebook_url = "https://www.facebook.com/smedfw"
     linkedin_url = "https://www.linkedin.com/company/smedfw"
