--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "license": "MIT",
   "homepage": "https://www.smedfw.com/",
-  "author": "SME Texaplex Virtual Chapter Contributors <open@smevirtual.com>",
+  "author": "SME Virtual Network Contributors <open@smevirtual.com>",
   "repository": {
     "type": "git",
     "url": "https://github.com/smevirtual/smedfw-website.git"
